--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="as">
 <head>
 <meta charset="UTF-8">
-<title>Happy 22nd Birthday</title>
+<title>Happy 22nd Birthday Yasin</title>
 
 <style>
 body{
     margin:0;
     font-family:'Segoe UI',sans-serif;
-    background: linear-gradient(135deg,#ff5f9e,#ffc371);
+    background: radial-gradient(circle,#ff5f9e,#ffb347);
     display:flex;
     justify-content:center;
     align-items:center;
     min-height:100vh;
     overflow:hidden;
+}
+
+/* Fireworks */
+.firework{
+    position:absolute;
+    width:6px;
+    height:6px;
+    background:white;
+    border-radius:50%;
+    animation: explode 1.5s infinite;
+}
+@keyframes explode{
+    0%{transform:scale(0);opacity:1;}
+    100%{transform:scale(20);opacity:0;}
 }
 
 /* Balloons */
@@ -24,7 +38,7 @@ body{
     height:65px;
     border-radius:50%;
     animation: float 8s infinite ease-in;
-    opacity:0.7;
+    opacity:0.8;
 }
 .balloon::after{
     content:'';
@@ -60,6 +74,120 @@ body{
 .card img{
     width:180px;
     height:180px;
+    border-radius:50%;
+    object-fit:cover;
+    border:5px solid #fff;
+}
+
+h1{margin:10px 0;}
+h2{color:yellow;}
+
+.age{
+    font-size:18px;
+    color:#fffacd;
+    margin-bottom:15px;
+}
+
+/* Cake */
+.cake{
+    margin:20px auto;
+    width:150px;
+    position:relative;
+}
+.layer{
+    height:40px;
+    border-radius:10px;
+}
+.layer1{background:#ff9999;}
+.layer2{background:#ff8080;margin-top:-10px;}
+.layer3{background:#ff6666;margin-top:-10px;}
+
+.candle{
+    width:10px;
+    height:35px;
+    background:white;
+    position:absolute;
+    top:-35px;
+    left:70px;
+}
+.flame{
+    width:14px;
+    height:14px;
+    background:orange;
+    border-radius:50%;
+    position:absolute;
+    top:-15px;
+    left:-2px;
+    animation:flicker 0.4s infinite;
+}
+
+@keyframes flicker{
+    0%{transform:scale(1);}
+    50%{transform:scale(1.3);}
+    100%{transform:scale(1);}
+}
+
+p{
+    font-size:16px;
+    line-height:1.6;
+}
+
+.footer{
+    margin-top:10px;
+    font-size:14px;
+}
+</style>
+</head>
+
+<body>
+
+<!-- Music -->
+<audio autoplay loop>
+    <source src="birthday.mp3" type="audio/mpeg">
+</audio>
+
+<!-- Balloons -->
+<div class="balloon"></div>
+<div class="balloon"></div>
+<div class="balloon"></div>
+<div class="balloon"></div>
+
+<!-- Fireworks -->
+<div class="firework" style="top:20%;left:20%"></div>
+<div class="firework" style="top:30%;left:80%"></div>
+<div class="firework" style="top:10%;left:50%"></div>
+
+<div class="card">
+
+<img src="photo.jpg" alt="Birthday Photo">
+
+<h1>🎉 Happy Birthday 🎉</h1>
+<h2>Dear Yasin</h2>
+
+<div class="age">
+আজিৰ পৰা তুমি <b>22 বছৰ</b>ৰ হলে 🎊
+</div>
+
+<div class="cake">
+    <div class="candle"><div class="flame"></div></div>
+    <div class="layer layer1"></div>
+    <div class="layer layer2"></div>
+    <div class="layer layer3"></div>
+</div>
+
+<p>
+জন্মদিনৰ অনেক অনেক শুভেচ্ছা 🎂  
+এই 22 বছৰ বয়সটো তোমাৰ জীৱনৰ নতুন আৰম্ভণি হওক।  
+সুখ, সফলতা আৰু হাঁহিৰে সদায় আগবাঢ়ি যোৱা 💖
+</p>
+
+<div class="footer">
+💐 With lots of love & best wishes 💐
+</div>
+
+</div>
+</body>
+</html>    height:180px;
     border-radius:50%;
     object-fit:cover;
     border:5px solid #fff;
