--- a/index.html
+++ b/index.html
@@ -16,20 +16,6 @@ body{
     overflow:hidden;
 }
 
-/* Fireworks */
-.firework{
-    position:absolute;
-    width:6px;
-    height:6px;
-    background:white;
-    border-radius:50%;
-    animation: explode 1.5s infinite;
-}
-@keyframes explode{
-    0%{transform:scale(0);opacity:1;}
-    100%{transform:scale(20);opacity:0;}
-}
-
 /* Balloons */
 .balloon{
     position:absolute;
@@ -60,6 +46,142 @@ body{
 }
 
 .card{
+    background:rgba(255,255,255,0.2);
+    backdrop-filter:blur(8px);
+    width:360px;
+    padding:25px;
+    border-radius:20px;
+    text-align:center;
+    color:#fff;
+    box-shadow:0 15px 30px rgba(0,0,0,0.3);
+    z-index:2;
+}
+
+.card img{
+    width:180px;
+    height:180px;
+    border-radius:50%;
+    object-fit:cover;
+    border:5px solid #fff;
+}
+
+video{
+    width:100%;
+    margin-top:15px;
+    border-radius:15px;
+    border:3px solid #fff;
+}
+
+h1{margin:10px 0;}
+h2{color:yellow;}
+
+.age{
+    font-size:18px;
+    color:#fffacd;
+    margin-bottom:15px;
+}
+
+/* Cake */
+.cake{
+    margin:15px auto;
+    width:150px;
+    position:relative;
+}
+.layer{
+    height:40px;
+    border-radius:10px;
+}
+.layer1{background:#ff9999;}
+.layer2{background:#ff8080;margin-top:-10px;}
+.layer3{background:#ff6666;margin-top:-10px;}
+
+.candle{
+    width:10px;
+    height:35px;
+    background:white;
+    position:absolute;
+    top:-35px;
+    left:70px;
+}
+.flame{
+    width:14px;
+    height:14px;
+    background:orange;
+    border-radius:50%;
+    position:absolute;
+    top:-15px;
+    left:-2px;
+    animation:flicker 0.4s infinite;
+}
+
+@keyframes flicker{
+    0%{transform:scale(1);}
+    50%{transform:scale(1.3);}
+    100%{transform:scale(1);}
+}
+
+p{
+    font-size:16px;
+    line-height:1.6;
+}
+
+.footer{
+    margin-top:10px;
+    font-size:14px;
+}
+</style>
+</head>
+
+<body>
+
+<!-- Music -->
+<audio autoplay loop>
+    <source src="birthday.mp3" type="audio/mpeg">
+</audio>
+
+<!-- Balloons -->
+<div class="balloon"></div>
+<div class="balloon"></div>
+<div class="balloon"></div>
+<div class="balloon"></div>
+
+<div class="card">
+
+<img src="photo.jpg" alt="Birthday Photo">
+
+<h1>🎉 Happy Birthday 🎉</h1>
+<h2>Dear Yasin</h2>
+
+<div class="age">
+আজিৰ পৰা তুমি <b>22 বছৰ</b>ৰ হলে 🎊
+</div>
+
+<!-- 🎥 VIDEO -->
+<video controls>
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support video.
+</video>
+
+<div class="cake">
+    <div class="candle"><div class="flame"></div></div>
+    <div class="layer layer1"></div>
+    <div class="layer layer2"></div>
+    <div class="layer layer3"></div>
+</div>
+
+<p>
+জন্মদিনৰ অনেক অনেক শুভেচ্ছা 🎂  
+এই 22 বছৰ বয়সটো তোমাৰ জীৱনৰ নতুন আৰম্ভণি হওক।  
+সুখ, সফলতা আৰু হাঁহিৰে সদায় আগবাঢ়ি যোৱা 💖
+</p>
+
+<div class="footer">
+💐 With lots of love & best wishes 💐
+</div>
+
+</div>
+</body>
+</html>.card{
     background:rgba(255,255,255,0.2);
     backdrop-filter:blur(8px);
     width:360px;
